fix z-index

--- a/packages/react/components/StoryModal/StoryModal.scss
+++ b/packages/react/components/StoryModal/StoryModal.scss
@@ -302,7 +302,7 @@
     padding: 0;
     cursor: pointer;
     position: absolute;
-    z-index: 999999;
+    z-index: 99999;
 
     top: 70px;
     left: 0;
